--- a/src/views/layouts/header.pug
+++ b/src/views/layouts/header.pug
@@ -34,7 +34,7 @@ html(lang="en")
         a.menu-option(href="#") Agenda
         a.menu-option(href="#") Publicar
       div
-        input(type="text", placeholder="Buscar...").search
+        input(type="text", placeholder="encuentra tu evento").search
         a(href="#")
           i.material-icons account_circle
 
